--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,7 +3,7 @@
 
   <mat-sidenav-container class="sidenav-container">
     <mat-sidenav #sidenav mode="side" opened class="sidenav">
-      <app-sidenav-menu (navigate)="sidenav.close()"></app-sidenav-menu>
+      <app-sidenav-menu></app-sidenav-menu>
     </mat-sidenav>
     <mat-sidenav-content class="sidenav-content">
       <router-outlet></router-outlet>
