--- a/src/app/shared/components/sidenav-menu/sidenav-menu.component.html
+++ b/src/app/shared/components/sidenav-menu/sidenav-menu.component.html
@@ -14,7 +14,7 @@
         matTooltipPosition="right"
         class="project-list-item" 
       >
-        <mat-icon matListItemIcon>{{ project.icon }}</mat-icon>
+        <mat-icon matListItemIcon class="me-2">{{ project.icon }}</mat-icon>
         <span matListItemTitle>{{ project.name }}</span>
       </mat-list-item>
     </mat-nav-list>
